[package]
name = "xvault-rewards"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "xVault $VLT staking + rewards program"

[lib]
crate-type = ["cdylib", "lib"]
name = "xvault_rewards"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "0.32.1", features = ["init-if-needed"] }
anchor-spl = { version = "0.32.1", features = ["token_2022"] }
sha2 = "0.10"
