[package]
name = "xvault-vault"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "xVault index-vault program (Token-2022 xStocks)"

[lib]
crate-type = ["cdylib", "lib"]
name = "xvault_vault"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "0.32.1", features = ["init-if-needed"] }
anchor-spl = { version = "0.32.1", features = ["token_2022", "token_2022_extensions"] }
xvault-oracle = { path = "../oracle", features = ["no-entrypoint"] }
